--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -4,8 +4,8 @@
 </p>
 
 <div data-behavior='messages'>
-	<% 1.upto(1000) do %>
-		<div><strong>jinyoung:</strong> Hello!</div>
+	<% @messages.each do |message| %>
+	<div><strong><%= message.user.username %>:</strong> <%= message.body %></div>
 	<% end %>
 </div>
 
